--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <li></li>
   <li></li>
 </ul>
-      
+  
+contact: Jianning Li (jianningli.me@gmail.com)
     </main>
 	<script src="index.js"></script>
   </body>
