--- a/scnn_mia.html
+++ b/scnn_mia.html
@@ -1,3 +1,7 @@
 <video width="400" controls>
   <source src="assests/scnn_mia.mp4" type="video/mp4">
 </video>
+
+
+<a href="https://www.techrxiv.org/articles/preprint/Sparse_Convolutional_Neural_Networks_for_Medical_Image_Analysis/19137518?file=34041698">Link to paper</a>
+
