--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>The github repository hosts various project pages, including: </h1>  
 <ul>
   <li><a href="https://proj-page.github.io/softwarex_monai.html">MONAI Skull Reconstruction</a></li>
-  <li><<a href="https://proj-page.github.io/scnn_mia">Sparse CNN for Shape Completion and Super-resolution</a>/li> 
+  <li> <a href="https://proj-page.github.io/scnn_mia">Sparse CNN for Shape Completion and Super-resolution</a> </li> 
   <li></li>
   <li></li>
   <li></li>
