--- a/reg_sc.html
+++ b/reg_sc.html
@@ -1,1 +1,6 @@
+<video width="900" controls>
+  <source src="assests/implant manual cleaning.mp4" type="video/mp4">
+</video>
 
+ <br>
+<a href="https://arxiv.org/pdf/2204.05703.pdf">Link to paper</a>
