--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <ul>
   <li><a href="https://proj-page.github.io/softwarex_monai.html">MONAI Skull Reconstruction</a></li>
   <li> <a href="https://proj-page.github.io/scnn_mia">Sparse CNN for Shape Completion and Super-resolution</a> </li> 
-  <li></li>
+  <li> <a href="https://proj-page.github.io/reg_sc.html">Registration-based (skull) shape completion </a></li>
   <li></li>
   <li></li>
   <li></li>
