--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <li><a href="https://proj-page.github.io/softwarex_monai.html">MONAI Skull Reconstruction</a></li>
   <li> <a href="https://proj-page.github.io/scnn_mia">Sparse CNN for Shape Completion and Super-resolution</a> </li> 
   <li> <a href="https://proj-page.github.io/reg_sc.html">Registration-based (skull) shape completion </a></li>
-  <li></li>
-  <li></li>
+  <li><a href="http://jianningli.me/C2F">A coarse-to-fine (C2F) framework for high-resolution (skull) shape completion </a></li>
+  <li><a href="http://jianningli.me/autoCranialImp">Deploying deep learning model to the cloud: A (skull) shape completion example </a></li>
   <li></li>
   <li></li>
   <li></li>
