--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <li> <a href="https://proj-page.github.io/reg_sc.html">Registration-based (skull) shape completion </a></li>
   <li><a href="http://jianningli.me/C2F">A coarse-to-fine (C2F) framework for high-resolution (skull) shape completion </a></li>
   <li><a href="http://jianningli.me/autoCranialImp">Deploying deep learning model to the cloud: A (skull) shape completion example </a></li>
-  <li></li>
-  <li></li>
+  <li><a href="http://jianningli.me/poster/MAD_Poster.pdf">(Skull) shape completion using a generative model: variational auto-encoder </a></li>
+  <li></li> 
   <li></li>
   <li></li>
 </ul>
   
-contact: Jianning Li (jianningli.me@gmail.com)
+contact: <a href="http://jianningli.me/">Jianning Li</a>  (jianningli.me@gmail.com)
     </main>
 	<script src="index.js"></script>
   </body>
