--- a/medshapenet_publications.html
+++ b/medshapenet_publications.html
@@ -19,7 +19,7 @@
   <li></li>
 </ul>
   
-contact: <a href="http://jianningli.me/">Jianning Li</a>  (jianningli.me@gmail.com)
+If your publications are not on the list, contact: <a href="http://jianningli.me/">Jianning Li</a> for an update  (jianningli.me@gmail.com)
     </main>
 	<script src="index.js"></script>
   </body>
