--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <h1>The github repository hosts various project pages, including: </h1>  
 <ul>
-  <li><a href="https://proj-page.github.io/softwarex_monai.html">MONAI Skull Reconstruction</a></li>
+  <li><a href="https://proj-page.github.io/softwarex_monai.html">MONAI Skull Reconstruction</a> (paper: <a href="https://www.sciencedirect.com/science/article/pii/S2352711023001280">Open-source skull reconstruction with MONA</a>) </li>
   <li> <a href="https://proj-page.github.io/scnn_mia">Sparse CNN for Shape Completion and Super-resolution</a> </li> 
   <li> <a href="https://proj-page.github.io/reg_sc.html">Registration-based (skull) shape completion </a></li>
   <li><a href="http://jianningli.me/C2F">A coarse-to-fine (C2F) framework for high-resolution (skull) shape completion </a></li>
