--- a/medshapenet_publications.html
+++ b/medshapenet_publications.html
@@ -12,10 +12,10 @@
     <main>
         <h1>The page lists publications that use <a href="https://github.com/Jianningli/medshapenet-feedback">MedShapeNet</a>, including: </h1>  
 <ul>
-  <li><a href="https://arxiv.org/abs/2309.03335">SADIR: Shape-Aware Diffusion Models for 3D Image Reconstruction</a></li>
+  <li> <a href="https://arxiv.org/abs/2309.03335">SADIR: Shape-Aware Diffusion Models for 3D Image Reconstruction</a></li>
   <li> <a href="https://arxiv.org/pdf/2309.04956.pdf">Anatomy Completor: A Multi-class Completion Framework for 3D Anatomy Reconstruction</a> </li> 
-  <li></li> 
-  <li></li>
+  <li> <a href="https://arxiv.org/abs/2311.03986.pdf">Multimodal extended reality applications offer benefits for volumetric biomedical image analysis in research and medicine </a> </li> 
+  <li> <a href="https://www.nature.com/articles/s41597-023-02684-0">3D surgical instrument collection for computer vision and extended reality</a> </li>
   <li></li>
 </ul>
   
