--- a/medshapenet_publications.html
+++ b/medshapenet_publications.html
@@ -72,12 +72,12 @@
 
             <div class="row">
                 <div class="col-md-3">
-                    <img class="img-fluid rounded mb-3 mb-md-0" src="assests/diffusion_model" alt="">
+                    <img class="img-fluid rounded mb-3 mb-md-0" src="assests/diffusion_model.png" alt="">
                 </div>
                 <div class="col-md-9">
                     <p>
                         <a target="new" href="https://www.researchgate.net/publication/375925772_Diffusion_Models_To_Predict_3D_Late_Mechanical_Activation_From_Sparse_2D_Cardiac_MRIs"><b>Diffusion Models To Predict 3D Late MechanicalActivation From Sparse 2D Cardiac MRIs
-</b></a>. In Scientific Data, 2023.
+</b></a>. In ML4H 2023.
                     
                     </p>
                 </div>
