Update medshapenet_publications.html, links point to my fork.
changed to the forked adress and my email. 
Thanks for all your help and hard work jianning

--- a/medshapenet_publications.html
+++ b/medshapenet_publications.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main>
-        <h1>The page lists publications that use <a href="https://github.com/Jianningli/medshapenet-feedback">MedShapeNet</a>, including: </h1>  
+        <h1>The page lists publications that use <a href="https://github.com/GLARKI/medshapenet-feedback">MedShapeNet</a>, including: </h1>  
 <div class="container" id="research">    
 
 <div class="row">
@@ -85,7 +85,7 @@
 	
 </div>
   
-If your publications are not on the list, contact: <a href="http://jianningli.me/">Jianning Li</a> for an update  (jianningli.me@gmail.com)
+If your publications are not on the list, contact:  <a href="mailto:gijs.luijten@uk-essen.de">Gijs Luijten</a> for an update  (jianningli.me@gmail.com)
     </main>
 	<script src="index.js"></script>
   </body>
