--- a/patch-wise-skull-rec.html
+++ b/patch-wise-skull-rec.html
@@ -6,10 +6,10 @@
     <title>GIF Example</title>
 </head>
 <body>
-    <h2>GIF 1</h2>
-    <img src="image1.gif" alt="First GIF" width="300">
+    <h2>Direct implant generation</h2>
+    <img src="assets/patch-wise-implant.gif" alt="First GIF" width="300">
 
-    <h2>GIF 2</h2>
-    <img src="image2.gif" alt="Second GIF" width="300">
+    <h2>Skull shape completion</h2>
+    <img src="assets/patch-wise.gif" alt="Second GIF" width="300">
 </body>
 </html>
