--- a/patch_wise_skull_rec.html
+++ b/patch_wise_skull_rec.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIF Example</title>
+    <title>Patch-wise Reconstruction</title>
 </head>
 <body>
     <h2>Direct implant generation</h2>
-    <img src="assets/patch-wise-implant.gif" alt="First GIF" width="300">
+    <img src="assets/patch-wise-implant.gif" alt="implantF" width="300">
 
     <h2>Skull shape completion</h2>
-    <img src="assets/patch-wise.gif" alt="Second GIF" width="300">
+    <img src="assets/patch-wise.gif" alt="skullF" width="300">
 </body>
 </html>
