--- a/patch_wise_skull_rec.html
+++ b/patch_wise_skull_rec.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h2>Direct implant generation</h2>
-    <img src="assets/patch-wise-implant.gif" alt="implantF" width="300">
+    <img src="assests/patch-wise-implant.gif" alt="implantF" width="300">
 
     <h2>Skull shape completion</h2>
-    <img src="assets/patch-wise.gif" alt="skullF" width="300">
+    <img src="assests/patch-wise.gif" alt="skullF" width="300">
 </body>
 </html>
